feat: create docker file